--- a/labo03_FIS/030_fis_parts/030_introduction.ipynb
+++ b/labo03_FIS/030_fis_parts/030_introduction.ipynb
@@ -92,18 +92,33 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**TODO student** \n",
     "\n",
-    " * What kind of type is the FIS shown in Figure 3 ?\n",
+    " * What kind of type is the FIS shown in Figure 3 ? <br>\n",
+    " **Mamdani**\n",
     " * Is there a default rule in this same FIS ?\n",
+    " \n",
     " * Write in plain text (french or english) how this same FIS's rule behave. For example:\n",
     "\n",
-    "> rule 1: IF var1 is LOW AND var3 is MEDIUM THEN output1 is LOW\n",
+    "Variables:\n",
     "\n",
-    "> rule 2: IF ....\n",
+    "temperature: {hot, warm, cold} <br>\n",
+    "sunshine: {sunny, part_sunny, cloudy} <br>\n",
     "\n",
-    "> rule 3: ....\n"
+    "Output:\n",
+    "tourist: {high, medium, low}\n",
+    "\n",
+    "> rule 1: IF temperature is warm AND sunshine is sunny THEN tourist is high\n",
+    "\n",
+    "> rule 2: IF temperature is hot AND sunshine is part_sunny THEN tourist is medium\n",
+    "\n",
+    "> rule 3: IF temperature is cold AND sunshine is cloudy THEN tourist is low\n"
    ]
   },
   {
@@ -173,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
