--- a/labo03_FIS/030_fis_parts/030_introduction.ipynb
+++ b/labo03_FIS/030_fis_parts/030_introduction.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lab 03 - Introduction\n",
+    "### Lab 03 - Introduction\n",
     "\n",
     "Author: Gary Marigliano, based on the work of Hector Satizabal\n",
     "\n",
@@ -188,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
